# rift-local

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
scripts/: build.sh  bump-version.sh
specs/: rift-local.md
src/rift_local/: __init__.py  cli.py  server.py  types.py
src/rift_local/backends/: __init__.py  moonshine.py  sherpa.py
src/rift_local/models/: __init__.py  download.py  registry.py
tests/: conftest.py  test_moonshine.py  test_server.py
